@@ -45,7 +45,11 @@
       handler=".to3000.upgrade_types"
     />
     
-    
+    <genericsetup:upgradeStep
+      title="Update value of prenotazione_folder"
+      handler=".to3000.upgrade_week_values"
+    />
+
   </genericsetup:upgradeSteps>
 
 </configure>
