@@ -4,6 +4,10 @@ Changelog
 2.2 (unreleased)
 ================
 
+- Added upgrade steps for prenotazioni_folder [nicolasenno]
+- Modified settimana_tipo colunms in prenotazioni_folder [nicolasenno]
+- Added expiration field to IPrenotazione content type and created
+  the upgrade step for its value [nicolasenno]
 - Adding a type PrenotazioniWeek
 - Adding a new week view
   [alert]
